2013-07-18  Ramon Casero  <rcasero@gmail.com>

	* matlab/add_gerardus_paths.m: (0.1.6)

	- Add paths for FastMarchingToolbox Matlab and MEX files.

	* matlab/ThirdPartyToolbox/FastMarchingToolbox/mex/perform_front_propagation_3d_mex.cpp:

	- Fix bug. Compilation errors in linux due to using general types
	(int) when a MEX type was needed (mwSize).

	* matlab/ThirdPartyToolbox/FastMarchingToolbox/CMakeLists.txt: (0.1.1)

	- Remove build of anisotropic propagation from toolbox, as it
	fails due to missing files. The reasons is that: Gabriel Peyre
	(21 Dec 2010): The code for the anisotropic propagation is not
	included anymore in the toolbox, so do not try to compile
	it. Contact me if you *really* need anisotropic propagation.

	* Add matlab/ThirdPartyToolbox/FastMarchingToolbox/CMakeLists.txt:
	(0.1.0)
	* matlab/ThirdPartyToolbox/CMakeLists.txt: (0.1.1)

	- Add the fast marching toolbox to the gerardus build system.

	* matlab/ThirdPartyToolbox/FastMarchingToolbox:

	- Change end-of-line to linux format. Set svn property for native
	end-of-line.

	* matlab/ThirdPartyToolbox/FastMarchingToolbox/mex/anisotropic-fm-feth/fm2dAniso.h:

	- Remove compilation warning in linux. Unused variables.

	* matlab/ThirdPartyToolbox/FastMarchingToolbox/mex/anisotropic-fm-feth/fm2dAniso.cpp:

	- Fix bug. Compilation errors in linux due to using general types
	(int) when a MEX type was needed (mwSize).

	* Add matlab/ThirdPartyToolbox/FastMarchingToolbox:

	- Toolbox Fast Marching by Gabriel Peyre

	24 Oct 2004 (Updated 27 Jun 2009). A toolbox for the computation
	of the Fast Marching algorithm in 2D and 3D.

	Downloaded from
	http://www.mathworks.com/matlabcentral/fileexchange/6110

2013-07-12  Ramon Casero  <rcasero@gmail.com>

	* matlab/ManifoldToolbox/smdscale.m: (0.5.0)
	* matlab/test/test_smdscale.m: (0.2.4)

	- Substantial rewrite of smdscale.

	- The previous version did not have a correct implementation of
	Agarwal's method. An iteration to adjust the mean position of each